[package]
name = "stivale_rs"
version = "0.2.2"
edition = "2018"
license = "MIT"
authors = ["David John <overflowedheap@gmail.com>"]
description = "Rust bindings for the stivale boot protocol."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["v2"]
v1 = []
v2 = []

[dependencies]
